<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/entriesButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="84dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="300dp"
                    android:fontFamily="@font/yantramanav_bold"
                    android:text="@string/entriesButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="28dp"
                    android:fontFamily="@font/yantramanav_bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dailyTextEntry"
                        android:layout_width="354dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/yantramanav_bold"
                        android:hint="@string/dailyEntry"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:visibility="visible" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/entriesButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="84dp"
                    android:layout_marginStart="300dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="23dp"
                    android:fontFamily="@font/yantramanav_bold"
                    android:onClick="sendMessage"
                    android:text="@string/submitButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="220dp"
                    android:layout_height="91dp"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="160dp"
                    android:fontFamily="@font/yantramanav_bold"
                    android:text="@string/intoText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>